--- a/appproject/codemon/templates/base.html
+++ b/appproject/codemon/templates/base.html
@@ -466,6 +466,7 @@
   <!-- 各ページでbg_frame_*.pngを指定 -->
   {% endblock %}
 
+  {% block global_navigation %}
   <!-- ナビゲーションタブ -->
   <header class="top-tabs">
     <nav class="tabs">
@@ -529,6 +530,7 @@
       </ul>
     </nav>
   </header>
+  {% endblock %}
 
   <!-- コンテンツエリア -->
   <div class="content-wrapper">
